--- a/src/CryptoPriceAnalizer/CryptoPriceAnalizer.csproj
+++ b/src/CryptoPriceAnalizer/CryptoPriceAnalizer.csproj
@@ -22,4 +22,8 @@
       <Folder Include="Services\" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Remove=".gitignore" />
+    </ItemGroup>
+
 </Project>
