--- a/.gitignore
+++ b/.gitignore
@@ -262,7 +262,7 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
-.idea
-.DS_Store
+.idea/
+.DS_Store/
 .vscode/
 .ipynb_checkpoints
