--- a/src/CryptoPriceAnalyzer/Properties/launchSettings.json
+++ b/src/CryptoPriceAnalyzer/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "CryptoPriceAnalizer": {
+    "CryptoPriceAnalyzer": {
       "commandName": "Project",
       "commandLineArgs": "--port 7277",
       "launchBrowser": false
