--- a/src/CryptoPriceAnalyzer/local.settings.default.json
+++ b/src/CryptoPriceAnalyzer/local.settings.default.json
@@ -4,6 +4,8 @@
         "AzureWebJobsStorage": "UseDevelopmentStorage=true",
         "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated",
 
+        "ConnectionStrings:CryptoDb": "Data Source=crypto.db",
+
         "Providers:Binance": "https://api.binance.com",
         "Providers:Kraken": "https://api.kraken.com",
         "Providers:CoinGecko": "https://api.coingecko.com"
